--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -33,6 +33,9 @@
 
         <script>
             Reveal.initialize({
+                width:       {{page.size[0]}},
+                height:      {{page.size[1]}},
+                maxScale:     2,
                 controls:     true,
                 progress:     true,
                 history:      true,
