--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -41,6 +41,7 @@
                 history:      true,
                 center:       true,
                 transition:   'none',
+                backgroundTransition: 'none',
                 // Optional reveal.js plugins
                 dependencies: [
                     {
